syntax = "proto3";
option csharp_namespace = "GrpcServerClientFirst";

service HelloRpc {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  string message = 2;
}

message HelloReply {
  string message = 1;
}